--- a/estilo2.css
+++ b/estilo2.css
@@ -108,8 +108,13 @@
     .caja,
     .caja1,
     .caja2{
-        width: 100px;
+        width: 80px;
         font-size: 10px;
+    }
+    .caja h4,
+    .caja1 h4,
+    .caja2 h4{
+        font-size: 15px;
     }
 }
 
